# GalgameManager

./: .gitignore  AGENTS.md  LICENSE  README.md  bun.lockb  eslint.config.js  flake.nix  index.html  package.json  tailwind.config.ts  tsconfig.json  uno.config.ts  vite.config.ts  vitest.config.ts
.agents/skills/foreground-tracking/: SKILL.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  publish.yml  test.yml  update-node-dependencies.yml  update-rust-packages.yml
.opencode/agents/: default.md
docs/: CHANGELOG.md  README-en.md  dev.md
src/: App.tsx  Sidebar.tsx  bindings.ts  index.css  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/bindings/: AppearanceConfig.ts  ArchPreference.ts  ArchiveAlgo.ts  ArchiveConfig.ts  ArchiveInfo.ts  AutoUploadGameConfig.ts  AutoUploadPluginMeta.ts  Config.ts  Device.ts  DeviceIdentity.ts  DllOverride.ts  ExecuteGameConfig.ts  ExecutePhase.ts  ExecutePluginMeta.ts  ExitSignal.ts  Game.ts  GameWrapperGameConfig.ts  GameWrapperPluginMeta.ts  ImageData.ts  LaunchConfig.ts  LocalConfig.ts  LocaleEmulatorGameConfig.ts  LocaleEmulatorPluginMeta.ts  LogLevel.ts  PluginInstance.ts  PluginMetadata.ts  PluginMetadatas.ts  RetentionScope.ts  S3Config.ts  Settings.ts  SortType.ts  SpeedupProvider.ts  StorageBackend.ts  StorageConfig.ts  StorageProvider.ts  ThemeMode.ts  TimeDisplayConfig.ts  TimeFormat.ts  TimeLanguage.ts  TranslatorGameConfig.ts  (+10 more)
src-tauri/capabilities/: default.json  default.toml
src-tauri/easy_strfmt/: Cargo.toml  README.md
src-tauri/easy_strfmt/src/: lib.rs
src-tauri/icons/: icon.icns
src-tauri/src/: bindings.rs  error.rs  lib.rs  logging.rs  utils.rs
src-tauri/src/archive/: mod.rs  squashfs.rs  tar.rs
src-tauri/src/db/: device.rs  migration.rs  migrations.rs  mod.rs  settings.rs
src-tauri/src/exec/: linux.rs  mod.rs  unix.rs  windows.rs
src-tauri/src/exec/linux/: mod.rs  spawn.rs
src-tauri/src/exec/linux/foreground/: atspi.rs  mod.rs  x11.rs
src-tauri/src/http/: mod.rs
src-tauri/src/plugin/: auto_upload.rs  config.rs  execute.rs  game_wrapper.rs  locale_emulator.rs  mod.rs  transaction.rs  translator.rs  voice_speedup.rs  voice_zerointerrupt.rs  wine.rs
src-tauri/src/sync/: local.rs  mod.rs  opendal.rs
src-tauri/src/utils/: audio_speed_hack.rs  mod.rs  toast.rs
src-tauri/tests/: config_compat.rs
src/components/: DropArea.tsx  FullScreenMask.tsx  GameEditModel.tsx  GameSettingButton.tsx  GameSettingDialog.tsx  Image.tsx  InputWithLabel.tsx  PathListEditor.tsx  PluginSection.tsx  VariableEditor.tsx
src/components/ui/: Badge.tsx  Button.tsx  CachedImage.tsx  ContextMenu.tsx  Divider.tsx  FieldHint.tsx  FormButton.tsx  FormField.tsx  FormInput.tsx  FormPathInput.tsx  FormSelect.tsx  FormSwitch.tsx  FormTableEditor.tsx  FormTextarea.tsx  FullScreenMask.tsx  GameActionButton.tsx  GameEditLabel.tsx  Hint.tsx  Image.tsx  Input.tsx  InputWithLabel.tsx  InputWithSuffix.tsx  LinkButton.tsx  Modal.tsx  PathListEditor.tsx  Select.tsx  SettingRow.tsx  SettingSection.tsx  SettingSubGroup.tsx  Spinner.tsx  StandardButton.tsx  Switch.tsx  Textarea.tsx  Tooltip.tsx  button.tsx  controls.tsx  dropdown-menu.tsx  form.tsx  myToast.tsx  settings.tsx  (+1 more)
src/context/: create.ts
src/i18n/: en-US.ts  index.tsx  zh-CN.ts
src/i18n/__tests__/: resolveTimeLanguage.test.ts
src/pages/: Game.tsx  GameSettingDialog.tsx  Plugin.tsx  Settings.tsx
src/pages/Game/: GameEditModal.tsx  GameEditModel.tsx  GameItem.tsx  GameItemWrapper.tsx  SyncModal.tsx  index.tsx
src/pages/Plugin/: index.tsx  registry.ts
src/pages/Plugin/plugins/: AutoAddMetaEditor.tsx  AutoUploadConfigEditor.tsx  ExecuteConfigEditor.tsx  GameWrapperConfigEditor.tsx  LocaleEmulatorConfigEditor.tsx  TranslatorConfigEditor.tsx  VoiceSpeedupConfigEditor.tsx  VoiceZerointerruptConfigEditor.tsx  WineConfigEditor.tsx  index.ts  types.ts
src/pages/Settings/: AppearanceTab.tsx  DeviceTab.tsx  LaunchTab.tsx  StorageTab.tsx  index.tsx
src/store/: AutoUploadService.ts  Singleton.ts  index.ts  index.tsx
src/test/stubs/: tauri-core.ts  tauri-dialog.ts  tauri-event.ts  tauri-fs.ts
src/types/: index.ts
src/utils/: bindings.ts  debounce.ts  file.ts  log.ts  path.ts  platform.ts  resolveVar.ts  sortTypeCache.ts  time.ts  useVarMap.ts  useVarWarning.ts  vndb.ts
src/utils/__tests__/: debounce.test.ts  file.test.ts  path.test.ts  resolveVar.test.ts  time.test.ts
src/utils/image/: index.ts  steamSearch.ts
src/utils/time/: createRelativeTime.ts  index.ts
