[package]
authors     = ["lxl66566 <lxl66566@gmail.com>"]
default-run = "GalgameManager"
description = "Manage and sync your galgames"
edition     = "2021"
license     = "MIT"
name        = "GalgameManager"
repository  = "https://github.com/lxl66566/GalgameManager"
version     = "0.1.0"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
crate-type = ["staticlib", "cdylib", "rlib"]
name       = "app_lib"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
async-trait         = "0.1.89"
backhand            = "0.24.0"
base64              = "0.22.1"
bytes               = "1.11.0"
chrono              = { version = "0.4", features = ["serde"] }
config-file2        = "0.4.1"
futures             = "0.3.31"
hex                 = "0.4.3"
home                = "0.5.12"
machine-uid         = "0.5.4"
opendal             = { version = "0.55.0", features = ["services-webdav", "services-s3"] }
parking_lot         = "0.12.5"
pathdiff            = "0.2.3"
reqwest             = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls", "http2", "charset", "system-proxy"] }
serde               = { version = "1.0", features = ["derive"] }
serde_json          = "1.0"
sha2                = "0.10.9"
strfmt              = "0.2.5"
tar                 = "0.4.44"
tauri               = { version = "2.0.6", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs     = "2.4.4"
thiserror           = "2.0.17"
tokio               = { version = "1", features = ["fs", "macros", "process"] }
tokio-util          = { version = "0.7", features = ["compat"] }
toml                = "0.9.10"
ts-rs               = { version = "11.1.0", features = ["format", "chrono-impl"] }
walkdir             = "2.5.0"
# tauri-plugin-sql  = { version = "2.2.0", features = ["sqlite"] }

[target.'cfg(windows)'.dependencies]
windows        = { version = "0.62", features = ["Win32_System_JobObjects", "Win32_System_Threading", "Win32_Foundation", "Win32_Security"] }
windows-result = { version = "0.4" }

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-window-state = "2.4.1"

[dev-dependencies]
tempfile = "3"

[features]
custom-protocol = ["tauri/custom-protocol"]
default         = ["custom-protocol"]

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
# codegen-units = 1       # Compile crates one after another so the compiler can optimize better
lto       = true    # Enables link to optimizations
opt-level = "s"     # Optimize for binary size. Use `3` if you prefer speed.
panic     = "abort" # Strip expensive panic clean-up logic
strip     = true    # Automatically strip symbols from the binary
