[package]
authors     = ["lxl66566 <lxl66566@gmail.com>"]
default-run = "GalgameManager"
description = "Manage and sync your galgames"
edition     = "2024"
license     = "MIT"
name        = "GalgameManager"
repository  = "https://github.com/lxl66566/GalgameManager"
version     = "1.2.0"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
crate-type = ["staticlib", "cdylib", "rlib"]
name       = "app_lib"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
async-trait               = "0.1.89"
backhand                  = "0.25.1"
chrono                    = { version = "0.4", features = ["serde"] }
config-file2              = "0.5"
dashmap                   = "6"
easy_strfmt               = { path = "./easy_strfmt", features = ["indexmap"] }
flexi_logger              = { version = "0.31", features = ["compress"] }
futures                   = "0.3"
goblin                    = "0.10"
hex                       = "0.4"
home                      = "0.5"
include_assets            = { version = "1", default-features = false, features = ["zstd"] }
indexmap                  = { version = "2", features = ["serde"] }
log                       = "0.4"
machine-uid               = "0.6"
opendal                   = { version = "0.57", features = ["services-webdav", "services-s3", "services-fs"] }
opener                    = "0.8"
parking_lot               = "0.12"
pathdiff                  = "0.2"
reqwest                   = { version = "0.13", features = ["json"] }
serde                     = { version = "1.0", features = ["derive"] }
sha2                      = "0.11"
shlex                     = "2"
similar                   = "3"
sys-locale                = "0.3"
tar                       = "0.4"
tauri                     = { version = "2.11.3", features = ["tray-icon"] }
tauri-plugin-dialog       = "2"
tauri-plugin-fs           = "2.5"
tauri-plugin-notification = "2.3"
tauri-plugin-opener       = "2.5"
thiserror                 = "2"
tokio                     = { version = "1", features = ["fs", "macros", "process", "rt", "time"] }
tokio-util                = { version = "0.7", features = ["compat"] }
toml                      = "1.1.2"
ts-rs                     = { version = "12.0", features = ["format", "chrono-impl", "indexmap-impl", "no-serde-warnings"] }
walkdir                   = "2"
# tauri-plugin-sql  = { version = "2.2.0", features = ["sqlite"] }

[target.'cfg(windows)'.dependencies]
windows              = { version = "0.62", features = ["Win32_System_JobObjects", "Win32_System_Threading", "Win32_Foundation", "Win32_Security", "Win32_UI_WindowsAndMessaging"] }
windows-env          = "0.2.0"
windows-result       = { version = "0.4" }
windows_registry_obj = "0.1.0"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = "2.4"
tauri-plugin-window-state    = "2.4"

# ── Linux-only: foreground-window tracking & process tracking ───────────────
# x11rb: EWMH queries (_NET_ACTIVE_WINDOW / _NET_WM_PID) on X11 / XWayland.
# zbus: D-Bus client used to subscribe to AT-SPI focus events under Wayland,
#       and to talk to systemd when launching games via `systemd-run --scope`.
# futures-util: StreamExt for iterating over zbus `MessageStream`.
[target.'cfg(target_os = "linux")'.dependencies]
futures-util = "0.3"
x11rb        = { version = "0.13", default-features = false }
zbus         = { version = "5", default-features = false, features = ["tokio"] }

[dev-dependencies]
serde_json = "1"
tempfile   = "3"

[features]
config-daily-backup = []
custom-protocol     = ["tauri/custom-protocol"]
default             = ["custom-protocol", "config-daily-backup"]

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
# codegen-units = 1       # Compile crates one after another so the compiler can optimize better
lto       = true    # Enables link to optimizations
opt-level = "s"     # Optimize for binary size. Use `3` if you prefer speed.
panic     = "abort" # Strip expensive panic clean-up logic
strip     = true    # Automatically strip symbols from the binary
